--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <main class="content">
-        <div class="text">
+        <div class="text" id="text">
             <p class="bot" id="bot"></p>
+            <p class="human" id="humanMsg">ola</p>
         </div>
     </main>
     <footer class="footer">
