--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <main class="content">
         <div class="text" id="text">
-            <p class="bot" id="bot"></p>
-            <p class="human" id="humanMsg">ola</p>
+
         </div>
     </main>
     <footer class="footer">
-        <div class="menu">
+        <div class="menu" id="btn">
             <input type="text" id="human" class="input" id="question" placeholder="Digite sua mensagem aqui" required>
             <button id="submit" class="btn" type="submit" id="btn"><img src="./public/images/icons/send.svg" alt="Enviar"></button>
         </div>
