--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
 </head>
 <body>
     <main class="content">
-        <div class="text" id="text">
+        <div class="text" id="box">
 
         </div>
     </main>
     <footer class="footer">
         <div class="menu" id="btn">
             <input type="text" id="human" class="input" id="question" placeholder="Digite sua mensagem aqui" required>
-            <button id="submit" class="btn" type="submit" id="btn"><img src="./public/images/icons/send.svg" alt="Enviar" onclick="controller.sendView(event)"></button>
+            <button id="submit" class="btn" type="submit" id="btn"><img src="./public/images/icons/send.svg" alt="Enviar" onclick="controller.sendForView(event)"></button>
         </div>
     </footer>
     <script src="./public/scripts/controller/Controller.js"></script>
     <script src="./public/scripts/model/Model.js"></script>
     <script src="./public/scripts/view/View.js"></script>
     <script>
-        let controller = new gracieController()
-        
+        let controller = new GracieController()
     </script>
 </body>
 </html>
