--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/styles/style.css">
+    <link rel="shortcut icon" href="./public/images/icons/faviconIcon.png">
     <title>Gracie</title>
 </head>
 <body>
@@ -18,6 +19,7 @@
             <button id="submit" class="btn" type="submit" id="btn"><img src="./public/images/icons/send.svg" alt="Enviar" onclick="controller.sendForView(event)"></button>
         </div>
     </footer>
+
     <script src="./public/scripts/controller/Controller.js"></script>
     <script src="./public/scripts/model/Model.js"></script>
     <script src="./public/scripts/view/View.js"></script>
